[package]
name = "linmath-demo"
version = "0.1.0"
authors = ["Bernhard Fritz <bernhard.e.fritz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.19"
wasm-bindgen = "0.2.42"
linmath = "0.0.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console',
  'WebGlUniformLocation',
]
